@@ -9,7 +9,6 @@ import static seedu.address.testutil.TypicalPersons.BENSON;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -42,13 +41,12 @@ public class JsonAdaptedPersonTest {
     private static final String VALID_EMAIL = BENSON.getEmail().toString();
     private static final String VALID_ADDRESS = BENSON.getAddress().toString();
     private static final String VALID_PRIORITY = BENSON.getPriority().toString();
-    private static final String VALID_REMARK = BENSON.getRemark().toString();
     private static final String VALID_DATE_OF_BIRTH = BENSON.getDateOfBirth().getValue().toString();
     private static final double VALID_INCOME = BENSON.getIncome().getValue();
     private static final int VALID_FAMILY_SIZE = BENSON.getFamilySize().getValue();
     private static final List<JsonAdaptedTag> VALID_TAGS = BENSON.getTags().stream()
             .map(JsonAdaptedTag::new)
-            .collect(Collectors.toList());
+            .toList();
     private static final String VALID_UPDATED_AT = LocalDateTime.now().toString();
 
     private static final ArrayList<JsonAdaptedScheme> VALID_SCHEMES = new ArrayList<>();
@@ -63,9 +61,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidName_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        INVALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        INVALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = Name.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -74,9 +71,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_nullName_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        null, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        null, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Name.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -85,9 +81,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidPhone_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, INVALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, INVALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = Phone.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -96,9 +91,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_nullPhone_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, null, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, null, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Phone.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -107,9 +101,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidEmail_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, INVALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, INVALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = Email.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -118,9 +111,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_nullEmail_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, null, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, null, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Email.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -129,9 +121,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidAddress_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, INVALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, INVALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = Address.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -140,9 +131,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_nullAddress_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, null, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, null, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Address.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -151,9 +141,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidPriority_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, INVALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, INVALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = Priority.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -162,9 +151,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_nullPriority_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, null, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, null, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Priority.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -173,7 +161,7 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidFormatDateOfBirth_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY,
                         INVALID_FORMAT_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
                         VALID_UPDATED_AT);
         String expectedMessage = Messages.MESSAGE_INVALID_DATE_FORMAT;
@@ -184,9 +172,9 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidDateOfBirth_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        INVALID_FUTURE_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS,
-                        VALID_SCHEMES, VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY,
+                        INVALID_FUTURE_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
+                        VALID_UPDATED_AT);
         String expectedMessage = DateOfBirth.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -195,8 +183,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_nullDateOfBirth_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        null, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, null,
+                        VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, DateOfBirth.class.getSimpleName());
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -205,9 +193,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidIncome_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, INVALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        INVALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = Income.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -216,9 +203,8 @@ public class JsonAdaptedPersonTest {
     public void toModelType_invalidFamilySize_throwsIllegalValueException() {
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, INVALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, INVALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, VALID_UPDATED_AT);
         String expectedMessage = FamilySize.MESSAGE_CONSTRAINTS;
         assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
     }
@@ -229,17 +215,15 @@ public class JsonAdaptedPersonTest {
         invalidTags.add(new JsonAdaptedTag(INVALID_TAG));
         JsonAdaptedPerson person =
                 new JsonAdaptedPerson(
-                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                        VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, invalidTags, VALID_SCHEMES,
-                        VALID_UPDATED_AT);
+                        VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                        VALID_INCOME, VALID_FAMILY_SIZE, invalidTags, VALID_SCHEMES, VALID_UPDATED_AT);
         assertThrows(IllegalValueException.class, person::toModelType);
     }
 
     @Test
     public void toModelType_invalidUpdatedAt_shouldNotThrow() {
         assertDoesNotThrow(() -> new JsonAdaptedPerson(
-                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_REMARK,
-                VALID_DATE_OF_BIRTH, VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES,
-                INVALID_UPDATED_AT));
+                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_PRIORITY, VALID_DATE_OF_BIRTH,
+                VALID_INCOME, VALID_FAMILY_SIZE, VALID_TAGS, VALID_SCHEMES, INVALID_UPDATED_AT));
     }
 }
